Include name and std number

--- a/Homework/Week_5/scatter.css
+++ b/Homework/Week_5/scatter.css
@@ -1,6 +1,9 @@
 /*
+Name: Tim de Boer
+Studentnummer: 11202351
 Style for the scatter.js
 */
+
 div.tooltip {
      position: absolute;
      text-align: center;
