--- a/Homework/Week_5/scatter.css
+++ b/Homework/Week_5/scatter.css
@@ -4,6 +4,7 @@ Studentnummer: 11202351
 Style for the scatter.js
 */
 
+/* Creates the boxes for tooltip */
 div.tooltip {
      position: absolute;
      text-align: center;
@@ -17,6 +18,7 @@ div.tooltip {
      line-height: 0.5;
 }
 
+/* Design for the axis and line */
 .axis path,
 .axis line {
     fill: none;
@@ -24,11 +26,13 @@ div.tooltip {
     shape-rendering: crispEdges;
 }
 
+/* Design for the labels on axis */
 .axis text {
     font-family: Verdana;
     font-size: 11px;
 }
 
+/* Design for dropdown menu */
 .dropbtn {
   background-color: #4CAF50;
   color: white;
@@ -37,11 +41,13 @@ div.tooltip {
   border: none;
 }
 
+/* Design when menu drops down */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
+/* Design of the content in dropdown menu*/
 .dropdown-content {
   display: none;
   position: absolute;
